#1031712 by Michelle: Gave structure to topic list empty view div to avoid layout issues when there are no topics in a forum. #1001524 by Michelle: Created content types for forum tools and node create list. #935322 / #1001524 by Michelle Got PM version in sync with non PM version.

--- a/styles/blue_lagoon/advanced_forum.blue_lagoon.style.css
+++ b/styles/blue_lagoon/advanced_forum.blue_lagoon.style.css
@@ -76,6 +76,10 @@ Colors used: (copied from silver bells... need to update)
 }
 
 /* Topic listings */
+.view-advanced-forum-topic-list .view-empty {
+  border: border: 3px solid #1659AC;
+}
+
 .forum-table tr.sticky {
   background-color: #E6EDEC;
 }
